# hrm-live

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Implementation_notes.md  Makefile  README.md  SECURITY.md  SUPPORT.md  app.py  ble.py  config.py  current-progress.md  hrm-live.entitlements  pyproject.toml  session.py  setup.py  state.py  zones.py
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
assets/: HRMLive.icns
docs/: FEATURE_ROADMAP.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_STATUS.md  PHASED_IMPLEMENTATION_PROMPT.md  PRIVACY.md  RELEASE_CHECKLIST.md  RELEASE_IMPLEMENTATION_HANDOFF.md  RELEASE_READINESS_AUDIT_2026-07-15.md  SCAN_AND_UI_REVIEWER_NOTES.md  SPEC.md  feature-roadmap.txt
scripts/: build_icon.py  install-git-hooks.sh
src/hrm_live/: __init__.py  __main__.py  app.py  ble.py  config.py  session.py  state.py  zones.py
src/hrm_live/ui/: __init__.py  graph.py  menubar.py  popover.py  settings.py  tokens.py
tests/: __init__.py  test_ble.py  test_config.py  test_graph.py  test_imports.py  test_session.py  test_state.py  test_tokens.py  test_ui_helpers.py  test_zones.py
ui/: __init__.py  graph.py  menubar.py  popover.py  settings.py
