[build-system]
requires = ["setuptools>=68.0"]
build_backend = "setuptools.build_meta"

[project]
name = "hrm-bar"
version = "0.1.0"
description = "macOS menu bar app for BLE heart rate monitor straps"
requires-python = ">=3.11"
license = "MIT"

dependencies = [
    "rumps>=0.4.0",
    "bleak>=0.21.0",
    "matplotlib>=3.8.0",
    "pyobjc-core",
    "pyobjc-framework-Cocoa",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::ImportWarning",
]
